--- a/style.css
+++ b/style.css
@@ -73,6 +73,48 @@ body {
   }
 
   > main {
+    width: 100%;
+    height: 100%;
+    margin-top: 16px;
     display: flex;
+    column-gap: 16px;
+
+    > canvas#treemapView {
+      width: calc(100% - 332px - 16px);
+      height: 100%;
+      border: 2px solid var(--color-gray);
+    }
+
+    > div.wishlist {
+      width: 332px;
+      height: 100%;
+      border: 2px solid var(--color-gray);
+      border-radius: 16px 16px 0 0 ;
+      padding-top: 16px;
+
+      > div.wishlist-title {
+        width: 100%;
+        height: 58px;
+        padding-inline: 16px;
+        padding-bottom: 16px;
+        border-bottom: 2px solid var(--color-gray);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      > ol {
+        width: 100%;
+        height: 100%;
+        padding: 16px;
+        list-style-position: inside;
+
+        > li {
+          height: 41px;
+          border-bottom: 1px solid var(--color-cloud);
+          padding-left: 16px;
+        }
+      }
+    }
   }
 }
