--- a/style.css
+++ b/style.css
@@ -49,8 +49,62 @@ button {
 dialog {
   margin: auto;
   padding: 16px;
+  border: none;
   border-radius: 16px;
   box-shadow: 0 0 1em black;
+
+  > div.modal-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  
+    > div.modal-header {
+      margin-bottom: 16px;
+    }
+  
+    > div.modal-body {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      font-size: 18px;
+
+      > form {
+        > div.inputs {
+          margin-bottom: 16px;
+
+          > div.input-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            column-gap: 8px;
+            margin-bottom: 8px;
+
+            > label {
+              margin-right: 4px;
+            }
+  
+            > input[type='text'], input[type='number'] {
+              padding: 4px 16px;
+              border: 2px solid var(--color-gray);
+              border-radius: 100vh;
+              font-size: 18px;
+              
+              &:focus, &:active {
+                border: 2px solid var(--color-valencia);
+              }
+            }
+          }
+        }
+
+        > div.buttons {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          column-gap: 8px;
+        }
+      }
+    }
+  }
 }
  
 dialog::backdrop {
