--- a/style.css
+++ b/style.css
@@ -202,6 +202,18 @@ body {
           height: 41px;
           border-bottom: 1px solid var(--color-cloud);
           padding-left: 16px;
+
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          > button {
+            width: 32px;
+            height: 32px;
+            padding: 0;
+            line-height: 32px;
+            text-align: center;
+          }
         }
       }
     }
